В Info.plist добавлено Privacy для сохранения фото в галерею; добавлены share-меню на экран с фото и на экран с видео

--- a/MobileUpGallery/Info.plist
+++ b/MobileUpGallery/Info.plist
@@ -19,5 +19,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to save</string>
 </dict>
 </plist>
